# llm-demo

./: pyproject.toml
langGraph/: basic_cahtbot.ipynb  chatbot.ipynb  chatbot_with_tool.ipynb
langchain/: RAG-docs.ipynb  first.ipynb  format_output.ipynb
langchain/chat_models/: .langchain.db  cache_chat.ipynb  stream_response.ipynb  structure_output.ipynb  tool_call.ipynb  track_token_usage.ipynb
langchain/messages/: filter_message.ipynb  merge_message.ipynb  partially_format_prompt.ipynb  trim_messages.ipynb
langchain/output/: structured.ipynb  text.ipynb
langchain/prompt_templates/: chat_with_example.ipynb  combine_prompt.ipynb  multimodal_prompts.ipynb  use_example.ipynb
