[project]
name = "llm-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.23.2",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "langchain-deepseek>=0.1.3",
    "langchain-tavily>=0.1.6",
    "langchain[anthropic,openai]>=0.3.25",
    "langgraph>=0.4.3",
    "langsmith>=0.3.42",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
]
